add two projects to portfolio

--- a/src/assets/code-projects.json
+++ b/src/assets/code-projects.json
@@ -1,22 +1,35 @@
 [
   {
-    "link": "https://github.com/shindekokoro/grow-box",
-    "title": "grow-box",
-    "img":"grow-box.png",
-    "technology": "NODE / chart.js / express",
-    "featured": true
+    "link": "https://github.com/shindekokoro/scriptable-wallbox",
+    "title": "Scriptable Wallbox",
+    "img":"wallbox.png",
+    "technology": "JS / Widget / iOS",
+    "featured": false
   },
   {
-    "link": "https://shindekokoro.github.io/concert-groupie/",
-    "title": "Concert Groupie",
-    "img":"concert-groupie.jpg",
-    "technology": "HTML / JS / CSS"
+    "link": "https://github.com/shindekokoro/spin-blog",
+    "title": "Spin-Blog",
+    "img":"blog.png",
+    "technology": "NODE / express / MySQL"
   },
   {
     "link": "https://www.npmjs.com/package/homebridge-poweredup",
     "title": "homebridge-poweredup",
     "img":"homebridge-poweredup.png",
     "technology": "NODE / IoT"
+  },
+  {
+    "link": "https://github.com/shindekokoro/grow-box",
+    "title": "grow-box",
+    "img":"grow-box.png",
+    "technology": "NODE / chart.js / express",
+    "featured": false
+  },
+  {
+    "link": "https://shindekokoro.github.io/concert-groupie/",
+    "title": "Concert Groupie",
+    "img":"concert-groupie.jpg",
+    "technology": "HTML / JS / CSS"
   },
   {
     "link": "https://shindekokoro.github.io/module01-CodeRefactor/",
