--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^6.11.1",
     "styled-components": "^6.1.1"
   },
