update portfolio with the roost

--- a/src/assets/code-projects.json
+++ b/src/assets/code-projects.json
@@ -1,5 +1,12 @@
 [
   {
+    "link": "https://github.com/shindekokoro/the-roost",
+    "title": "The Roost",
+    "img":"the-roost.png",
+    "technology": "React / mongoDB / MUI / Mobile Game",
+    "featured": true
+  },
+  {
     "link": "https://github.com/shindekokoro/scriptable-wallbox",
     "title": "Scriptable Wallbox",
     "img":"wallbox.png",
